--- a/front/Platender.Front/Pages/Plates.razor
+++ b/front/Platender.Front/Pages/Plates.razor
@@ -31,6 +31,19 @@
     {
         background-color: red;
     }
+
+    .add-plate-container
+    {
+        display: grid;
+        grid-template-columns: 25% [first] 25% [second] 25% 25%;
+        grid-template-rows: 25% [first]50% [second] 25%;
+    }
+
+    .add-plate-form
+    {
+        grid-column: first;
+        grid-row: first;
+    }
 </style>
 <form @onsubmit="() => OnValidSubmit(numbers)">
     <InputText @bind-Value="numbers" />
@@ -47,15 +60,16 @@
 </div>
 @if (isResponseNull)
 {
-    <div >
-        <EditForm Model="@plate" OnValidSubmit="@SavePlateAsync">
+    <div class="add-plate-container">
+        <div class="add-plate-form">
+        <EditForm Model="@newPlate" OnValidSubmit="@SavePlateAsync">
             <div class="form-group">
                 <label for="Number">Number:</label>
-                <InputText @bind-Value="@plate!.Number"></InputText>
+                <InputText @bind-Value="@newPlate!.Number"></InputText>
             </div>
             <div class="form-group">
                 <label for="Culture">Culture:</label>
-                <select class="form-control" @bind="@plate.Culture">
+                <select class="form-control" @bind="@newPlate.Culture">
                     @foreach (var culture in Enum.GetNames(typeof(CultureCode)))
                     {
                         <option value="@culture"> @culture </option>
@@ -64,5 +78,6 @@
             </div>
             <button type="submit" class="btn btn-primary">Add Plate</button>
         </EditForm>
+        </div>
     </div>
 }
