Front plate view improvements. I encountered problems with reading the jwt token and authorization

--- a/front/Platender.Front/Pages/Login.razor
+++ b/front/Platender.Front/Pages/Login.razor
@@ -19,7 +19,7 @@
 					<label for="password"> Password: </label>
 					<ValidationMessage For="() => InputAccount.Password" class="text-danger" />
 				</div>
-				<button id="registerSubmit" type="submit" class="m-100 btn btn-lg btn-primary">Register</button>
+				<button id="registerSubmit" type="submit" class="m-100 btn btn-lg btn-primary">Login</button>
 			</EditForm>
 		</section>
 	</div>
