Added Spots, fixed front dto

--- a/front/Platender.Front/Pages/Plates.razor
+++ b/front/Platender.Front/Pages/Plates.razor
@@ -31,7 +31,7 @@
             Plate was not found, do you want to save that plate?
         </div>
         <div>
-            <button type="submit" @OnSubmit="PostPlate">Save Plate</button>
+            <button type="submit" @onclick="PostPlate">Save Plate</button>
         </div>
     }
 }
