--- a/front/Platender.Front/Shared/NavMenu.razor.css
+++ b/front/Platender.Front/Shared/NavMenu.razor.css
@@ -1,54 +1,45 @@
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+.page {
+    display: grid;
+    grid-template-columns: [first] 10% [second] 32.5% [third] 32.5% [fourth] 25% ;
+    grid-template-rows: [first] 60% [second] 35%;
+    grid-row-gap: 5%;
+    width: 100%;
+    height: 100%;
 }
 
-.top-row {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+.logo{
+    grid-column: second;
+    grid-row: first;
+
+    border: 1px solid magenta;
 }
 
-.navbar-brand {
-    font-size: 1.1rem;
+.te-smieci{
+    grid-column: third;
+    grid-row: first;
+    border:1px solid blue;
 }
 
-.oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
+.nav-bar-container {
+    grid-row: second;
+    grid-column-end: span 4;
+
+    background-color: #385cac;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
 }
 
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
+.nav-bar {
+    display: flex;
+    justify-content: center;
+    gap: 75px;
 }
 
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
-
-    .nav-item ::deep a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
+.nav-bar button{
+    border-radius: 15px;
+    width: 150px;
 }
 
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
 
 @media (min-width: 641px) {
     .navbar-toggler {
