--- a/front/Platender.Front/Shared/NavMenu.razor
+++ b/front/Platender.Front/Shared/NavMenu.razor
@@ -1,18 +1,17 @@
-﻿<div class="page">
-    <div class="logo">
+<div class="page" style="background-color: #b7b7b7; width: 100%; height: 58px">
+    <div class="logo" style="width: 475px">
         lgoo
     </div>
-    <div class="te-smieci">smeci</div>
+    <div class="te-smieci" style="width: 484px">smeci</div>
 
     <div class="nav-bar-container">
-        <div class="nav-bar">
-            <button type="button" onclick="alert('Hello world!')">first</button>
-            <button type="button" onclick="alert('Hello world!')">second</button>
-            <button type="button" onclick="alert('Hello world!')">third</button>
-            <button type="button" onclick="alert('Hello world!')">fourth</button>
+        <div class="nav-bar" style="display: flex; justify-content: space-evenly; background-color: #2c52f8" >
+            <MudButton Variant="Variant.Filled">Default</MudButton>
+            <MudButton Variant="Variant.Filled">Default</MudButton>
+            <MudButton Variant="Variant.Filled">Default</MudButton>
+            <MudButton Variant="Variant.Filled">Default</MudButton>
         </div>
     </div>
 </div>
 
-@code {
-}
+
