--- a/front/Platender.Front/Shared/MainLayout.razor
+++ b/front/Platender.Front/Shared/MainLayout.razor
@@ -1,14 +1,12 @@
-﻿@inherits LayoutComponentBase
-
-<div class="page">
-
-    <main>
-        <div class="top-row">
+@inherits LayoutComponentBase
+<MudThemeProvider/>
+<MudDialogProvider/>
+<MudSnackbarProvider/>
+<MudLayout>
+    <div style="margin-bottom: 58px">
             <NavMenu />
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+    </div>
+    <MudMainContent>
+        @Body
+    </MudMainContent>
+</MudLayout>
