--- a/front/Platender.Front/Pages/MainPage.razor.css
+++ b/front/Platender.Front/Pages/MainPage.razor.css
@@ -1,11 +1,28 @@
-﻿.page {
+.page {
     padding: 0 25px 0 25px;
     font-size: 10px;
+}
+
+.content-container {
+    display: flex;
+    flex-direction: column;
+    column-gap: 50px;
+    justify-content: space-evenly;
 }
 
 .rounded-border {
     border: 1px solid black;
     border-radius: 10px;
+}
+
+.padding-top-4-rem {
+    padding-top: 4rem !important;
+}
+
+.padding-vertical-middle {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 970px;
 }
 
 .drivers-container {
@@ -28,5 +45,4 @@
 }
 
 .spotts-container {
-    border: 1px solid black;
 }
