Found missing data in DTO

--- a/front/Platender.Front/Pages/MainPage.razor
+++ b/front/Platender.Front/Pages/MainPage.razor
@@ -18,6 +18,7 @@
 		<ImageCarousel Title="Spotts"></ImageCarousel>
 	</div>
 </div>
+<EUPlate></EUPlate>
 <div>
 	TopLikedPlates:
 @foreach (var data in TopLikedPlates)
