--- a/front/Platender.Front/Pages/PlateView.razor
+++ b/front/Platender.Front/Pages/PlateView.razor
@@ -54,3 +54,19 @@
         <p>Loading...</p>
     }
 </div>
+
+<div>
+    <MudPaper>
+        <div>
+            <EUPlate CultureCode="@_plate.Culture" Number="@_plate.Number"/>
+        </div>
+    </MudPaper>
+    <div>
+
+    </div>
+
+    <div>
+        <MudPaper>
+        </MudPaper>
+    </div>
+</div>
