--- a/front/Platender.Front/Pages/Plates.razor
+++ b/front/Platender.Front/Pages/Plates.razor
@@ -22,7 +22,7 @@
     {
         @foreach(var plate in _plates.Items)
         {
-            @plate.Number
+            @plate.Culture @plate.Number
         }
     }
     else
