--- a/front/Platender.Front/Pages/Login.razor
+++ b/front/Platender.Front/Pages/Login.razor
@@ -24,3 +24,15 @@
 		</section>
 	</div>
 </div>
+
+<MudForm>
+	<MudTextField T="string" @bind-Value="InputAccount.UserName" Label="Username" Required="true" RequiredError="User name is required!" />
+ 	<MudTextField T="string" @bind-Value="InputAccount.Password" Label="Password" @ref="pwField1"
+                                  InputType="InputType.Password"
+                                  Validation="@(new Func<string, IEnumerable<string>>(PasswordStrength))" Required="true"
+                                  RequiredError="Password is required!"/>
+	 <div class="d-flex align-center justify-space-between">
+=		<MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" OnClick="(()=>LoginUser())">Login</MudButton>
+	</div>
+</MudForm>
+
