--- a/front/Platender.Front/Pages/MainPage.razor
+++ b/front/Platender.Front/Pages/MainPage.razor
@@ -6,37 +6,16 @@
 <div class="content-container">
 	<div class="drivers-container" style="display: flex; justify-content: space-evenly;">
 		<div class="drivers-card rounded-border">
-			<TableComponent BestDrivers="BestDrivers" Title="TOP 10 BEST DRIVERS" ButtonText="VIEW MORE!" >
+			<TableComponent BestDrivers="TopLikedPlates" Title="TOP 10 BEST DRIVERS" ButtonText="VIEW MORE!" >
 			</TableComponent>
 		</div>
 		<div class="drivers-card rounded-border">
-			<TableComponent BestDrivers="BestDrivers" Title="TOP 10 WORST DRIVERS" ButtonText="VIEW MORE!" >
+			<TableComponent BestDrivers="TopLikedPlates" Title="TOP 10 WORST DRIVERS" ButtonText="VIEW MORE!" >
 			</TableComponent>
 		</div>
 	</div>
 	<div class="spotts-container padding-top-4-rem padding-vertical-middle" style="">
 		<ImageCarousel Title="Spotts"></ImageCarousel>
 	</div>
-</div>
-<EUPlate></EUPlate>
-<div>
-	TopLikedPlates:
-@foreach (var data in TopLikedPlates)
-{
-	<div>
-		@data.PlateId;
-	</div>
-}
-</div>
-
-<div>
-	TopLikedSpotts
-	@foreach (var data in TopLikedSpotts)
-	{
-		<div>
-			@data.PlateId
-		</div>
-	}
-
 </div>
 
