--- a/front/Platender.Front/Pages/Login.razor
+++ b/front/Platender.Front/Pages/Login.razor
@@ -32,7 +32,7 @@
                                   Validation="@(new Func<string, IEnumerable<string>>(PasswordStrength))" Required="true"
                                   RequiredError="Password is required!"/>
 	 <div class="d-flex align-center justify-space-between">
-=		<MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" OnClick="(()=>LoginUser())">Login</MudButton>
+		<MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" OnClick="(()=>LoginUser())">Login</MudButton>
 	</div>
 </MudForm>
 
