--- a/front/Platender.Front/Pages/Register.razor
+++ b/front/Platender.Front/Pages/Register.razor
@@ -1,4 +1,4 @@
-﻿@page "/Account/Register"
+@page "/Account/Register"
 
 <PageTitle>Register</PageTitle>
 <div class="row">
@@ -24,4 +24,14 @@
 		</section>
 	</div>
 </div>
+<MudForm>
+	<MudTextField T="string" @bind-Value="InputAccount.UserName" Label="Username" Required="true" RequiredError="User name is required!" />
+ 	<MudTextField T="string" @bind-Value="InputAccount.Password" Label="Password" @ref="pwField1"
+                                  InputType="InputType.Password"
+                                  Validation="@(new Func<string, IEnumerable<string>>(PasswordStrength))" Required="true"
+                                  RequiredError="Password is required!"/>
+	 <div class="d-flex align-center justify-space-between">
+		<MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" OnClick="(()=>RegisterUser())">Login</MudButton>
+	</div>
+</MudForm>
 
