--- a/front/Platender.Front/Pages/PlateView.razor
+++ b/front/Platender.Front/Pages/PlateView.razor
@@ -1,4 +1,5 @@
-﻿@page "/plates/{plateId}"
+@page "/plates/{plateId}"
+@using Platender.Front.Components
 <div>
     @if (_plate != null)
     {
@@ -26,7 +27,7 @@
                 <EditForm Model="_comment" OnSubmit="PostComment">
                     <div>
                         <label>Content:</label>
-                        <InputTextArea @bind-Value="_comment.Content"></InputTextArea>
+                        <InputTextArea @bind-Value="_comment.Description"></InputTextArea>
                     </div>
                     <div>
                         <button type="submit" class="btn btn-success">Submit</button>
@@ -34,17 +35,17 @@
                 </EditForm>
             </div>
             <div>
-                @if (_plate.Comments is not null)
+                @if (_comments is not null || _comments.Any())
                 {
-                    @foreach (var comment in _plate.Comments)
+                    @foreach (var comment in _comments)
                     {
-                        <Comment Username="@comment.AddingUserName" Content="@comment.Content" ShowActionButtons="false"></Comment>
+                        <Comment Username="@comment.AddingUserName" Content="@comment.Description" ShowActionButtons="false"></Comment>
                     }
                 }
             </div>      
         </div>
         <div>
-            
+            <Platender.Front.Components.AddComment @ref=AddCommentField SubmitButtonAction=@PostComment></Platender.Front.Components.AddComment>
         </div>
     }
     else
