--- a/front/Platender.Front/Components/ImageCard.razor
+++ b/front/Platender.Front/Components/ImageCard.razor
@@ -1,11 +1,10 @@
-<MudCard>
-    <MudCardActions>
-        <div>
-            <MudIconButton></MudIconButton>
+<MudCard Style="margin-left: 15px; width: 200px; display: flex; flex-direction: column;" Elevation="1">
+    
+    <MudCardContent style="padding-top: 0;">
+        <div style="position: relative;">
+        <MudImage Width="175" Height="175" src="@image" ObjectFit="ObjectFit.Contain" />
+        <MudIconButton Icon="@Icons.Material.Filled.Delete" Color="MudBlazor.Color.Error" Style="position: absolute; top: 0; right: 0; width: 10px; height: 10px; padding: 0px"></MudIconButton>
         </div>
-    </MudCardActions>
-    <MudCardContent>
-        <MudImage style="width: 150px; margin-right: 1rem; margin-top: 1rem" src="@image" />
     </MudCardContent>
 </MudCard>
 
