--- a/front/Platender.Front/Shared/NavMenu.razor
+++ b/front/Platender.Front/Shared/NavMenu.razor
@@ -6,10 +6,10 @@
 
     <div class="nav-bar-container">
         <div class="nav-bar" style="display: flex; justify-content: space-evenly; background-color: #2c52f8" >
-            <MudButton Variant="Variant.Filled">Default</MudButton>
-            <MudButton Variant="Variant.Filled">Default</MudButton>
-            <MudButton Variant="Variant.Filled">Default</MudButton>
-            <MudButton Variant="Variant.Filled">Default</MudButton>
+            <MudButton Variant="Variant.Filled" Color="MudBlazor.Color.Warning">Default</MudButton>
+            <MudButton Variant="Variant.Filled" Color="MudBlazor.Color.Warning">Default</MudButton>
+            <MudButton Variant="Variant.Filled" Color="MudBlazor.Color.Warning">Default</MudButton>
+            <MudButton Variant="Variant.Filled" Color="MudBlazor.Color.Warning">Default</MudButton>
         </div>
     </div>
 </div>
